--- a/app/src/main/res/layout/activity_my_order.xml
+++ b/app/src/main/res/layout/activity_my_order.xml
@@ -27,14 +27,33 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/nav_return" />
 
-            <TextView
-                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/my_order"
-                android:textColor="@color/text_color_black"
-                android:textSize="21sp" />
+                android:layout_gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_buyer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/dp_14"
+                    android:padding="@dimen/dp_6"
+                    android:text="买家"
+                    android:textColor="@drawable/selector_order_top_text"
+                    android:textSize="@dimen/sp_16" />
+
+                <TextView
+                    android:id="@+id/tv_seller"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_14"
+                    android:padding="@dimen/dp_6"
+                    android:text="卖家"
+                    android:textColor="@drawable/selector_order_top_text"
+                    android:textSize="@dimen/sp_16" />
+
+            </LinearLayout>
 
         </android.support.v7.widget.Toolbar>
 
@@ -59,6 +78,21 @@
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tablayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabIndicatorColor="@color/text_color_black" />
+
+    </android.support.v4.view.ViewPager>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager_1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tablayout_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabIndicatorColor="@color/text_color_black" />
