--- a/app/src/main/res/layout/activity_order_evaluate.xml
+++ b/app/src/main/res/layout/activity_order_evaluate.xml
@@ -17,6 +17,7 @@
             android:id="@+id/tv_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:background="@drawable/nav_return" />
 
         <TextView
@@ -33,6 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:background="@drawable/shape_btn_round_commit"
             android:padding="@dimen/dp_10"
             android:text="@string/order_evaluate_publish"
@@ -45,76 +47,80 @@
         android:layout_height="1px"
         android:background="@color/text_color_gray_a" />
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/dp_10"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:padding="@dimen/dp_10"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <ImageView
-                android:id="@+id/iv_icon"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/person" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="@dimen/dp_10"
-                android:text="@string/order_evaluate"
-                android:textColor="@color/text_color_black"
-                android:textSize="18sp" />
-
-            <com.boss66.meetbusiness.widget.MyRatingBar
-                android:id="@+id/ratingBar"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="8dp"
-                app:srb_borderColor="@color/record_progress_red"
-                app:srb_fillColor="@color/record_progress_red"
-                app:srb_pressedBorderColor="@color/record_progress_red"
-                app:srb_pressedFillColor="@color/record_progress_red" />
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/iv_icon"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/person" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="@dimen/dp_10"
+                    android:text="@string/order_evaluate"
+                    android:textColor="@color/text_color_black"
+                    android:textSize="18sp" />
+
+                <com.boss66.meetbusiness.widget.MyRatingBar
+                    android:id="@+id/ratingBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="8dp"
+                    app:srb_borderColor="@color/record_progress_red"
+                    app:srb_fillColor="@color/record_progress_red"
+                    app:srb_pressedBorderColor="@color/record_progress_red"
+                    app:srb_pressedFillColor="@color/record_progress_red" />
+
+            </LinearLayout>
+
+
+            <EditText
+                android:id="@+id/et_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_18"
+                android:background="#f2f6f9"
+                android:gravity="left"
+                android:hint="@string/order_evaluate_tip"
+                android:padding="@dimen/dp_10"
+                android:textColor="@color/text_color_black"
+                android:textColorHint="@color/text_color_gray_9"
+                android:textCursorDrawable="@null" />
+
+            <LinearLayout
+                android:id="@+id/ll_img"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dp_10"
+                android:layout_marginTop="@dimen/dp_14"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:background="@color/text_color_gray_a" />
 
         </LinearLayout>
-
-
-        <EditText
-            android:id="@+id/et_content"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginTop="@dimen/dp_18"
-            android:background="@color/umeng_socialize_divider"
-            android:gravity="left"
-            android:hint="@string/order_evaluate_tip"
-            android:padding="@dimen/dp_10"
-            android:textColor="@color/text_color_black"
-            android:textColorHint="@color/text_color_gray_6"
-            android:textCursorDrawable="@null" />
-
-        <LinearLayout
-            android:id="@+id/ll_img"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dp_10"
-            android:layout_marginTop="@dimen/dp_14"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:background="@color/text_color_gray_a" />
-
-    </LinearLayout>
-
+    </ScrollView>
 </LinearLayout>
