--- a/app/src/main/res/layout/activity_order_evaluate.xml
+++ b/app/src/main/res/layout/activity_order_evaluate.xml
@@ -10,7 +10,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:padding="@dimen/dp_10">
 
         <TextView
@@ -29,14 +29,13 @@
             android:textColor="@color/text_color_black"
             android:textSize="21sp" />
 
-        <TextView
+        <Button
             android:id="@+id/bt_upload"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@drawable/shape_btn_round_commit"
-            android:padding="@dimen/dp_10"
             android:text="@string/order_evaluate_publish"
             android:textColor="@color/white" />
 
@@ -63,11 +62,14 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <ImageView
+                <com.atgc.cotton.widget.RoundImageView
                     android:id="@+id/iv_icon"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:src="@drawable/person" />
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/person"
+                    app:round_borderRadius="8dp"
+                    app:round_type="1" />
 
                 <TextView
                     android:layout_width="wrap_content"
