--- a/app/src/main/res/layout/item_order_foot.xml
+++ b/app/src/main/res/layout/item_order_foot.xml
@@ -64,6 +64,7 @@
     </RelativeLayout>
 
     <View
+        android:id="@+id/v_end_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="@dimen/dp_18"
