--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -14,8 +14,8 @@
             android:layout_marginLeft="10dp"
             android:id="@+id/img_back"
             android:src="@drawable/nav_return"
-            android:layout_width="40dp"
-            android:layout_height="40dp" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <TextView
             android:textSize="18sp"
@@ -28,5 +28,11 @@
 
 
     </RelativeLayout>
+    <com.github.jdsjlzx.recyclerview.LRecyclerView
+        android:id="@+id/rv_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </com.github.jdsjlzx.recyclerview.LRecyclerView>
 
 </LinearLayout>
