--- a/app/src/main/res/layout/activity_agent_goods.xml
+++ b/app/src/main/res/layout/activity_agent_goods.xml
@@ -28,10 +28,21 @@
             android:textSize="22sp" />
     </RelativeLayout>
 
-    <WebView
+    <com.atgc.cotton.widget.MyWebView
         android:id="@+id/wb"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/rl_top_bar">
-    </WebView>
+
+    </com.atgc.cotton.widget.MyWebView>
+
+    <ProgressBar
+        android:id="@+id/web_view_progress"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_below="@id/rl_top_bar"
+        android:max="100"
+        android:progress="10"
+        android:progressDrawable="@drawable/webview_progress_bar" />
 </RelativeLayout>
