--- a/app/src/main/res/layout/activity_apply_agent.xml
+++ b/app/src/main/res/layout/activity_apply_agent.xml
@@ -41,7 +41,6 @@
         android:layout_below="@+id/rl_top_bar"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
-        android:text="你的申请资料已提交!"
         android:textColor="@color/record_progress_red"
         android:textSize="@dimen/text_size_32" />
 
@@ -50,6 +49,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:layout_marginLeft="@dimen/dp_22"
+        android:layout_marginRight="@dimen/dp_22"
         android:textColor="@color/record_progress_red"
         android:textSize="@dimen/text_size_32"
         android:visibility="gone" />
@@ -71,5 +72,5 @@
         android:background="@color/record_progress_red"
         android:text="下一步"
         android:textColor="@color/white"
-        android:textSize="25sp" />
+        android:textSize="22sp" />
 </RelativeLayout>
