--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="bg_pannel">#f0eff4</color>
     <color name="gray_normal">#666667</color>
     <color name="black">#000000</color>
+    <color name="text_green">#7CB342</color>
     <color name="bt_bg_gray">#DFDFDF</color>
     <color name="main_color_blue">#5381c5</color>
     <color name="background_color_gray">#f6f6f6</color>
